tests/NormalTests/paczka1/small_fuzzy/19735161.err
Error in line 1: SsluRN9odZ2 S994 71,2
Error in line 8: yt3I4Sfv S994 41,0
